2006-10-09  Marek Habersack  <grendello@gmail.com>

	* HttpApplication.cs: change the pipeline order for ASP.NET 2.0 to
	comply with the Microsoft documentation.

2006-09-28 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* HttpApplication.cs: this makes the test run successfully. Still need
	to figure out why that is null.

2006-09-28 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* HttpApplication.cs: band-aid patch to help debugging hang running 2.0
	tests.

2006-09-27 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* HttpServerUtility.cs: 1.1 Execute(s) preserves the query string.
	Thanks to Hubert Fongarnand. Fixes bug #79506.

2006-09-26 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* QueueManager.cs: if disposed, always return null for next request.
	* HttpRuntime.cs: dispose the queue manager when shutting down the
	domain. This will close pending requests with a 503.
	* HttpApplication.cs: release the handler before marking the request
	as completed. If in PipelineDone context is null, use
	HttpContext.Current. Fixes some of those "Tick detected an unhandled
	exception" errors printed out.

2006-09-11  Andrew Skiba <andrews@mainsoft.com>

	* XmlSiteMapProvider.cs: ifdef TARGET_JVM

2006-09-11  Vladimir Krasnov  <vladimirk@mainsoft.com>

	* HttpWriter.cs: fixed WriteLine to work correctly in utf-16 encoding

2006-09-08  Robert Jordan  <robertj@gmx.net>

	* TraceData.cs: fixed NRE if `sizes' is null, which may happen
	if a page was unable to save its viewstate and size.

2006-09-07 Andrew Skiba <andrews@mainsoft.com>

	* HttpApplicationFactory.cs: ifdef the previous fix with TARGET_JVM to
	pass compilation.

2006-09-06 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* HttpApplicationFactory.cs: watch web.config too. Fixes bug #78356.

2006-09-05  Konstantin Triger <kostat@mainsoft.com>

	* SiteMapProvider.cs: consider authorization section for access decision.

2006-09-04 Igor Zelmanovich <igorz@mainsoft.com>

	* HttpUtility.cs: fixed UrlPathEncode method.
