@@ -1,3 +1,9 @@
+2008-08-20  Marek Habersack  <mhabersack@novell.com>
+
+	* HttpResponseHeader.cs: encode header values in the 2.0 profile
+	if httpRuntime.enableHeaderChecking is true (default). Fixes bug
+	#418620
+
 2006-10-09  Marek Habersack  <grendello@gmail.com>
 
 	* HttpApplication.cs: change the pipeline order for ASP.NET 2.0 to
